--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@apollo/client": "^3.12.4",
     "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/vue": "^5.0.4",
     "astro": "^5.1.2",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "react": "^19.0.0",
+    "react-compiler-runtime": "19.0.0-beta-e552027-20250112",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vue": "^3.5.13"
   }
 }
