--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/react": "^4.1.4",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^5.2.1",
     "astro": "^5.1.6",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
