--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4"
   }
 }
