--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@astrojs/react": "^4.2.2",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vue": "^5.0.8",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "astro": "^5.5.5",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^10.18.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "react": "^19.0.0",
