--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@types/lodash": "^4.17.16",
     "@vitejs/plugin-vue": "^5.2.1",
     "astro": "^5.5.5",
     "clsx": "^2.1.1",
@@ -24,6 +25,7 @@
     "framer-motion": "^10.18.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-compiler-runtime": "19.0.0-beta-e552027-20250112",
     "react-dom": "^19.0.0",
