--- a/package.json
+++ b/package.json
@@ -14,28 +14,30 @@
     "@astrojs/react": "^4.2.2",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vue": "^5.0.8",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.1",
+    "@mui/system": "^7.0.1",
+    "@phosphor-icons/react": "^2.1.7",
     "@types/lodash": "^4.17.16",
     "@vitejs/plugin-vue": "^5.2.1",
     "astro": "^5.5.5",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^10.18.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
-    "react": "^19.0.0",
-    "react-compiler-runtime": "19.0.0-beta-e552027-20250112",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.2",
+    "typescript": "^5.3.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4"
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19"
   }
 }
