Company data imported succesfully

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.12.6",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/image": "^0.18.0",
     "@astrojs/react": "^4.2.2",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vue": "^5.0.8",
